// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`YoutubeVideo should match init snapshot 1`] = `
<div>
  <div
    class="post__embed-container"
  >
    <div>
      <h4>
        <span
          class="video-type"
        >
          YouTube - 
        </span>
        <span
          class="video-title"
        >
          <a
            href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
            location="youtube_video"
            rel="noopener noreferrer"
            target="_blank"
          >
            Youtube title
          </a>
        </span>
      </h4>
      <div
        class="video-div embed-responsive-item"
      >
        <div
          aria-label="Play Youtube title on YouTube"
          class="video-thumbnail__container"
          role="button"
          tabindex="0"
        >
          <img
            alt="Thumbnail for Youtube title on YouTube"
            class="video-thumbnail"
            src="https://img.youtube.com/vi/xqCoNej8Zxo/maxresdefault.jpg"
          />
          <div
            aria-label="Play video"
            class="play-button"
            role="presentation"
          >
            <i
              aria-hidden="true"
              class="icon-play"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`YoutubeVideo should match snapshot for playing state 1`] = `
<div>
  <div
    class="post__embed-container"
  >
    <div>
      <h4>
        <span
          class="video-type"
        >
          YouTube - 
        </span>
        <span
          class="video-title"
        >
          <a
            href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
            location="youtube_video"
            rel="noopener noreferrer"
            target="_blank"
          >
            Youtube title
          </a>
        </span>
      </h4>
      <div
        class="video-div embed-responsive-item"
      >
        <div
          class="video-playing"
        >
          <iframe
            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
            allowfullscreen=""
            frameborder="0"
            height="100%"
            sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
            src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0&fs=1&enablejsapi=1"
            title="Youtube title"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`YoutubeVideo should match snapshot for playing state and \`youtubeReferrerPolicy = true\` 1`] = `
<div>
  <div
    class="post__embed-container"
  >
    <div>
      <h4>
        <span
          class="video-type"
        >
          YouTube - 
        </span>
        <span
          class="video-title"
        >
          <a
            href="https://www.youtube.com/watch?v=xqCoNej8Zxo"
            location="youtube_video"
            rel="noopener noreferrer"
            target="_blank"
          >
            Youtube title
          </a>
        </span>
      </h4>
      <div
        class="video-div embed-responsive-item"
      >
        <div
          class="video-playing"
        >
          <iframe
            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
            allowfullscreen=""
            frameborder="0"
            height="100%"
            referrerpolicy="origin"
            sandbox="allow-scripts allow-same-origin allow-popups allow-presentation"
            src="https://www.youtube.com/embed/xqCoNej8Zxo?autoplay=1&rel=0&fs=1&enablejsapi=1"
            title="Youtube title"
            width="100%"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
